Updating french translation

--- a/po/fr.po
+++ b/po/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: Enlightenment\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-04-19 16:15+0200\n"
-"PO-Revision-Date: 2020-04-29 10:50+0200\n"
+"PO-Revision-Date: 2020-05-15 11:08+0200\n"
 "Last-Translator: Philippe Jean Guillaumie <similar@orange.fr>\n"
 "Language-Team: French\n"
 "Language: fr\n"
@@ -6972,7 +6972,7 @@ msgstr "Ne pas afficher dans la miniature des bureaux"
 
 #: src/modules/quickaccess/e_mod_config.c:569
 msgid "Quickaccess Settings"
-msgstr "Paramètres d'Accès rapide"
+msgstr "Paramètres d'Accès rapide (Quickaccess)"
 
 #: src/modules/quickaccess/e_mod_main.c:53
 #: src/modules/quickaccess/e_mod_main.c:63
@@ -7478,7 +7478,7 @@ msgstr "Miniature des bureaux"
 
 #: src/modules/pager/e_mod_main.c:904
 msgid "All desktop settings"
-msgstr "Paramétrage d'ensemble pour les bureaux"
+msgstr "Paramétrage pour l'ensemble des bureaux"
 
 #: src/modules/pager/e_mod_main.c:915
 msgid "This desktop name and wallpaper settings"
