--- a/TODO
+++ b/TODO
@@ -201,15 +201,13 @@ TODO:
     * user cron front-end config/editor
     * allow separate LC_MESSAGES, LC_TIME, LC_NUMERIC, LC_NAME, etc.
 * dnd: remove e_dnd and use elm's dnd instead
-* new gadgets:
-  * be able to move, resize etc. without alt move/resize mode like old)
-  * initial gadget bar setup dnd needs to be normal dnd
-  * setup needs an obvious "add" button as dnd not obvious
-  * wizard setup could be nicer? maybe just a default bar with no wizard?
-  * changing settings should not re-run the wizard!
-  * need to visually join gadget and gadget popup so they can kind of
-    look like a "tab" thats joined when we want to do this kind of
-    appearance
+* gadgets:
+  * add a simpler interface for registering a gadcon (eg use size hints)
+  * long press for right-mouse-menu
+  * change to unified shared right-mouse-menu always and simpler content
+  * add alt + drag/resize
+  * remove all new gadget code
+  * break any new gadgets outside of e
 * efm: smartctl status info and monitoring
 * efm: lvm/raid setup array and status support
 * efm: use elm for window
