--- a/TODO
+++ b/TODO
@@ -328,3 +328,10 @@ TODO:
   * emixer - support selecting recording dev for apps like pavucontrol
   * look at showing vu bars per recoridng or maybe output devices
   * offer ability to show vu output in mixer gadget
+* weather
+  * forecasts will due feb 2021. yahoo shutting down free api.
+    given all the changes needed to do a new api...
+    may as well write a whole new weather gadget.
+  * free api:
+    * https://api.met.no/weatherapi/locationforecast/2.0/documentation
+  * a dependency of this (so we can provide lat/lon)
